# Gojira

./: CMakeLists.txt  Makefile  README.md  main.cpp
Gojira/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Gojira/asm/: GAssembler.cpp  GAssembler.h  GCapstone.cpp  GCapstone.h  GKeystone.cpp  GKeystone.h  assembler_interface.h
Gojira/assist/: GSharedPoint.h
Gojira/container/: GArray.h  GString.cpp  GString.h
Gojira/fileformat/: CMakeLists.txt  Makefile  cmake_install.cmake
Gojira/fileformat/mp3/: MP3Defs.h  MP3File.h  ini_mp3_assist.cpp  ini_mp3_assist.h
Gojira/fileformat/pe/: PEDefs.h  PEDosHeader.cpp  PEDosHeader.h  PEFile.cpp  PEFile.h
Gojira/hook/: HookEngine.cpp  HookEngine.h  hook_interface.h
Gojira/include/: GAsm.h  GContainer.h  GHook.h  GMemory.h  GProcess.h  GSystem.h  Gojira.h  GojiraDefs.h  GojiraIO.h
Gojira/io/: MemoryStream.cpp  MemoryStream.h  io_interface.h
Gojira/memory/: MemoryManager.cpp  MemoryManager.h  memory_interface.h
Gojira/process/: process.cpp  process.h  process_interface.h
Gojira/system/: GSystemDefs.h  GSystemExp.cpp  GSystemExp.h
